--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,133 @@
-body {
-    margin: 0;
-    padding: 0;
-}
-
 * {
     box-sizing: border-box;
     font-family: "Inter";
+}
+
+body, html, #root {
+    margin: 0 !important;
+    padding: 0 !important;
+    transition: background-color .5s;
+    height: 100vh;
+    width: 100vw;
 }
 
 #root {
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
-    text-align: center;
+    --timing-bounce: cubic-bezier(.3,1.44,.77,.88);
 }
 
 main {
+    text-align: center;
     position: absolute;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 95%;
+    max-width: 700px;
 }
 
 .main-box {
-    color: white;
-    background-color: #0009;
-    border-radius: 20px;
-    border: solid #0000 2px;
     padding: 30px;
-    transition: .4s;
+    background-color: #1115;
+    color: white;
+    border-radius: 10px;
+    border: solid #1110 2px;
+    transition: .2s;
+    margin-bottom: 10px;
 }
 
-.main-box:hover {
-    background-color: #000A;
-    border-color:#000F;
+.main-box:is(:hover, :focus-within) {
+    background-color: #111C;
+    filter: drop-shadow(0 0 .1px #FFF9);
+}
+
+.main-box > ::selection {
+    background-color: white;
+    color: black;
 }
 
 input {
-    background-color: white;
-    color: black;
-    border: solid #0000 2px;
-    border-radius: 10px;
-    outline: none;
+    width: 100%;
+    max-width: 400px;
     padding: 10px;
-    font-size: 15px;
-    transition: .4s;
-    width: fit-content;
-    min-width: 100px;
+    background-color: #FFF3;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+    border: none;
+    /* border: solid transparent 2px; */
+    outline: none;
+    transition: .2s;
 }
 
 input:is(:hover, :active, :focus-visible) {
-    border-color: var(--input-to-hsl-color); 
+    background-color: #FFF6;
 }
 
+.color-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.color-container > div {
+    flex: 1;
+    height: 46px;
+    flex-direction: column;
+    background-color: #1115;
+    color: white;
+    border-radius: 10px;
+    border: solid transparent 2px;
+    transition: .2s;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+    -moz-user-select: none;
+    width: 100%;
+    overflow-y: hidden;
+}
+
+.color-container > div:hover {
+    background-color: #111C;
+    border: solid white 1px;
+    filter: drop-shadow(0 0 3px white);
+}
+
+div.slider {
+    min-height: 200%;
+    width: 100%;
+    margin-block: auto;
+    display: flex;
+    flex-direction: column;
+    transform: translateY(-50%);
+    transition: transform .3s var(--timing-bounce);
+}
+
+div.slider.copied-start {
+    transform: translateY(0);
+}
+
+div.slider.copied-end {
+    transition: transform .3s var(--timing-bounce);
+}
+
+div.slider > * {
+    flex: 1;
+    padding-block: 10px;
+    font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+div.slider > span {
+    font-weight: 600;
+}
+
+@media screen and (max-width: 475px) {
+    .color-container {
+        flex-direction: column;
+    }
+}
